[package]
name = "grrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3" # 命令行解析包，基于 clap
# clap = { version = "3.2.8", features = ["derive"]}
anyhow = "1.0" # 错误处理库
indicatif = "0.16" # 显示进度条
log = "0.4" # 日志包
ansi_term = "0.12" # 终端彩色显示包
