[package]
name = "windows-ui-01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.windows]
version = "0.38.0"
features = [
    "alloc",
    "Data_Xml_Dom",
    "Win32_Foundation", # Win32 基础
    "Win32_Security", # 安全
    "Win32_System_Threading", # Win32 系统线程
    "Win32_UI_WindowsAndMessaging"
]
